# ray_tracing

./: .gitignore  ApiHeader.h  ApiImplementation.h  CMakeLists.txt  ImageSettings.cpp  ImageSettings.h  ImageSettings.hpp  Makefile  Painter.hpp  main.cpp  ray_tracing.h  ray_tracing.sln  ray_tracing.vcxproj  ray_tracing.vcxproj.filters  settings.in  settings.rt  settings2.in
calculations/: Intersecter.cpp  Intersecter.h  Intersecter.hpp  KDTree.hpp
geometry/: Double.cpp  Double.h  Double.hpp  Geometry.cpp  Geometry.h  Geometry.hpp
models/: tiler_3d.stl
objects/: ConvexPolygon.cpp  ConvexPolygon.h  ConvexPolygon.hpp  GeometricObject.cpp  GeometricObject.h  GeometricObject.hpp  Parallelogram.cpp  Parallelogram.h  Parallelogram.hpp  PlaneGeometricObject.cpp  PlaneGeometricObject.h  PlaneGeometricObject.hpp  Sphere.cpp  Sphere.h  Sphere.hpp  Triangle.cpp  Triangle.h  Triangle.hpp
painters/: IPainter.hpp  PNGPainter.cpp  PNGPainter.h  PNGPainter.hpp
parsers/: DefaultParser.cpp  DefaultParser.h  DefaultParser.hpp  IFileParser.hpp  RTParser.cpp  RTParser.h  RTParser.hpp  STLParser.cpp  STLParser.h  STLParser.hpp
